overview: Fixed bad overview mode state transition with double tap.

Do not activate quick switch when double tapping the tray, if the mru
window is not activate. This was causing an unexpected window activation
which was messing up the overview state, and also visually popping up
and activating an unexpected window.

Test: Checked that OnEndingAnimation does not get called between ToggleOverview calls
Bug: 905082
Change-Id: Iaa7d3d02482d33d27ade6684ece8b92e9c270204
Reviewed-on: https://chromium-review.googlesource.com/c/1336149
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608193}
Former-commit-id: e6a1d18780f57accfc5d891a741bbd161e63b872